<resources>
    <string name="app_name">Timer</string>
    <string name="welcome_title">Welcome to timer app!</string>

    <string name="timer_executed">Timer finished!</string>
    <string name="timer_initial_value">00:00:00</string>
    <string name="timer_interrupted">Timer interrupted!</string>

    <string name="button_start_label">Start</string>
    <string name="button_stop_label">Stop</string>

    <string name="timer_seconds">SS</string>
    <string name="time_minutes">MM</string>
    <string name="time_hour">HH</string>
    <string name="button_pause_label">Pause</string>
    <string name="button_reset_label">Reset</string>

    <string name="notification_activity">NotificationView</string>
    <string name="default_notification_message">Your timer has expired!</string>
    <string name="channel_id">my_channel_id</string>
    <string name="channel_name">DefaultNotificationChannel</string>
    <string name="channel_description">Default Notification Channel</string>
</resources>