<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:text="@string/welcome_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_view_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/timer_initial_value"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/time_hour"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_text_minutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/time_minutes"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_text_seconds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/timer_seconds"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_start_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/button_start_label"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_pause_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/button_pause_label"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_stop_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/button_stop_label"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
